# chcount_project

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
backend/: .clang-format  CMakeLists.txt  CountProcessSession.cpp  CountProcessSession.hpp  HttpSession.cpp  HttpSession.hpp  Listener.cpp  Listener.hpp  Net.hpp  README.md  Request.hpp  Response.hpp  SharedState.cpp  SharedState.hpp  WebSocketSession.cpp  WebSocketSession.hpp  main.cpp
backend/dto/: CountDto.hpp
backend/utils/: ContentType.hpp  MimeType.cpp  MimeType.hpp  Response.hpp
cli/: .clang-format  CMakeLists.txt  README.md  main.cpp
frontend/: README.md  index.html
frontend/js/: main.js
scripts/: README.md  build.sh  deploy.sh  install_dependencies.sh
